# Tomografia

./: .gitignore  CMakeLists.txt  README.md
coloquio/: expo.snm  expo.tex
coloquio/img/: rayos2020.pgm  rayos5050.pgm  rayos9090.pgm  tomo_ruido001.pgm  tomo_ruido_06.pgm  tomo_ruido_08.pgm
imgs_TC/: tomo.pgm  tomo2.csv  tomo3.csv  tomo_emisores_100.pgm  tomo_emisores_120.pgm  tomo_emisores_140.pgm  tomo_emisores_20.pgm  tomo_emisores_40.pgm  tomo_emisores_60.pgm  tomo_emisores_80.pgm  tomo_granu_10.pgm  tomo_granu_20.pgm  tomo_granu_25.pgm  tomo_granu_4.pgm  tomo_granu_5.pgm  tomo_granu_50.pgm  tomo_rayos_100.pgm  tomo_rayos_110.pgm  tomo_rayos_120.pgm  tomo_rayos_130.pgm  tomo_rayos_140.pgm  tomo_rayos_50.pgm  tomo_rayos_60.pgm  tomo_rayos_70.pgm  tomo_rayos_80.pgm  tomo_rayos_90.pgm  tomo_ruido_0.01.pgm  tomo_ruido_0.02.pgm  tomo_ruido_0.03.pgm  tomo_ruido_0.04.pgm  tomo_ruido_0.05.pgm  tomo_ruido_0.06.pgm  tomo_ruido_0.1.pgm  tomo_ruido_0.2.pgm  tomo_ruido_0.5.pgm
imgs_TC/dicom_csv2/: 1.2.826.0.1.3680043.2.656.1.138.1.csv  imagenprueba2.csv  (+21 more)
informe/: apendices.tex  caratula.sty  conclusiones.tex  desarrollo.tex  discusion.tex  experimentacion.tex  graficos.tex  informe.dvi  informe.tex  introduccion.tex  referencias.tex  resultados.tex
matlab/: graficar_rayos.m  simularRayo_tp3.m
ppmloader/: CMakeLists.txt  main.cpp  ppmloader.cpp  prueba.ppm
src/: imagen.cpp  imagen.h  kfold.cpp  kfold.h  kfold.hpp  knn.cpp  knn.h  main.cpp  misc.cpp  misc.h  pca.cpp  pca.h  ppmloader.h  rayos.cpp  rayos.h  rayos.hpp  ruido.cpp  ruido.h  sparse.cpp  sparse.h
(+14 files in other folders)
